# graduate_work

./: README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
assistant/: .env_example  Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml  setup.cfg
assistant/src/: main.py
assistant/src/api/v1/: assistant.py
assistant/src/core/: config.py  logger.py
assistant/src/schemas/: assistant.py
assistant/src/services/: assistant_service.py
assistant/src/services/giga_chat_service/: giga_chat_service.py  helper_functions.py  main_functions.py
assistant/src/tests/functional/: conftest.py  settings.py
assistant/src/tests/functional/src/: test_assistants.py
assistant/src/tests/functional/test_data/: vk.py  yandex.py
assistant/src/utils/: cache.py  translate_text.py
movies/fastapi-solutions/: .env_example  README.md  docker-compose.yml  nginx.conf
movies/fastapi-solutions/src/: main.py
movies/fastapi-solutions/src/api/v1/: films.py  genres.py  persons.py
movies/fastapi-solutions/src/db/: cache.py
movies/fastapi-solutions/src/docs/: swagger_description.py
movies/tests/functional/: README.md  commands.sh  pyproject.toml
movies/tests/functional/src/test_film/: test_film.py  test_search_film.py
movies/tests/functional/src/test_genre/: test_genre.py
movies/tests/functional/src/test_person/: test_persons.py  test_search_person.py
movies/tests/functional/utils/: exceptions.py  wait_for_es.py  wait_for_redis.py  wait_for_service.py
