[tool.poetry]
name = "assistant"
version = "0.1.0"
description = ""
authors = ["Смирнова Татьяна <tsmirnova@astralinux.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.112.1"}
uvicorn = {extras = ["standard"], version = "^0.30.6"}
fastapi-cors = "^0.0.6"
gunicorn = "^23.0.0"
gigachain-community = "^0.2.12"
backoff = "^2.2.1"
httpx = "^0.27.2"
translate = "^3.6.1"
redis = "^5.0.4"
aiohttp = "^3.7.2"
pytest = "^6.1.2"
pytest-asyncio = "^0.12.0"
wemake-python-styleguide = "^0.19.2"
mypy = "^1.11.2"
lxml = "^5.3.0"
flake8-html = "^0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-rsxX -l --tb=short --strict"
testpaths = ["tests", "funcional"]
filterwarnings = "ignore::DeprecationWarning"

[tool.mypy]
ignore_missing_imports = true